--- a/styles/main.css
+++ b/styles/main.css
@@ -365,3 +365,34 @@ svg {
     width: 1px;
   }
 }
+
+@media (width <= 600px) {
+ .home-text {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+ } 
+
+ .home-profile {
+  padding: 10px;
+  margin: 0;
+ }
+
+ .insta-logo, .linkedin-logo {
+  width: 6%;
+}
+
+.about-container {
+  padding: 10px;
+  margin: 0;
+}
+
+.service-container div {
+  margin: 0;
+}
+
+.skill-container {
+  margin: 0;
+  padding: 0;
+}
+}
