--- a/styles/footer.css
+++ b/styles/footer.css
@@ -61,10 +61,9 @@ input {
 }
 
 .up-arrow {
-  position: sticky;
-  top: 590px;
+  position: fixed;
+  bottom: 10px;
   right: 10px;
-  float: right;
   padding: 10px 18px;
   font-size: 18px;
   background-color: lightseagreen;
@@ -73,7 +72,6 @@ input {
   font-weight: bolder;
   cursor: pointer;
 }
-
 .up-arrow:hover {
   background-color: rgb(36, 155, 149);
 }
